# vision_matrice100

./: CMakeLists.txt  README.md  package.xml
cfg/: camera_parameters.txt  cfg_params_lidarCamara.yaml  cfg_params_real.yaml  cfg_params_sim copy.yaml  cfg_params_sim.yaml
include/: kalman.cpp  utils_lib.h
launch/: aruco_detection.launch  movilsimulation.launch  panelFeatureKalman_real.launch  panelFeatureKalman_sim.launch  panelFeature_real.launch  panelFeature_sim.launch  panelFeatures.launch  panelFeaturesLidarCamara.launch  start_visual_servo_real.launch  start_visual_servo_sim.launch  visual_servo_space_null sim.launch  visual_servo_space_null_real.launch  visual_servo_space_null_real_cinematic_diff.launch  visual_servo_space_null_sim.launch  visual_servo_space_null_sim_cinematic_diff.launch
msg/: DurationStamped.msg
rviz/: lidar_and_dron.rviz  rviz_prueba.rviz  vision_matrice100.rviz
src/: LidarCameraFusion_simulation.cpp  add_gravity_IMU.cpp  aruco_detection.cpp  f_extraction_depth_channel.cpp  feature_extraction.cpp  feature_extraction_respaldo.cpp  filtered_pointcloud.cpp  image_filter_real.cpp  image_filter_real_respaldo.cpp  image_filter_simulation.cpp  kalman_filter_panelLines copy.cpp  kalman_filter_panelLines.cpp  kalman_filter_panelLines_errores.cpp  kalman_filter_panelLines_respaldo.cpp  kalman_filter_panelLines_respaldos.cpp  lidar_to_dron.cpp  rosbag_rotate.cpp  solar_panel_features copy 2.cpp  solar_panel_features.cpp  solar_panel_features_original.cpp  solar_panel_features_respaldo.cpp  system_excitation.cpp  utils_lib.cpp  visual_servo_space_null.cpp  visual_servo_space_null_respaldo.cpp
